[gd_scene load_steps=8 format=3 uid="uid://diqwj8oenn8d2"]

[ext_resource type="Script" path="res://scripts/start_up_menu.gd" id="1_s11dk"]
[ext_resource type="Theme" uid="uid://dfjvbpbn8v7j0" path="res://TitleTheme.tres" id="1_v6eoh"]
[ext_resource type="Theme" uid="uid://j8m37612a0eo" path="res://SubTitleTheme.tres" id="2_6mkbl"]
[ext_resource type="PackedScene" uid="uid://bibkoy67pb64u" path="res://scenes/player1.tscn" id="3_284oa"]
[ext_resource type="PackedScene" uid="uid://f2i42fmqfya5" path="res://scenes/player2.tscn" id="5_rca87"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yqufa"]
size = Vector2(15, 658)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dp1gm"]
size = Vector2(20.6348, 1151.83)

[node name="StartUpMenu" type="Node2D"]
script = ExtResource("1_s11dk")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_right = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="StartupTitle" type="RichTextLabel" parent="CanvasLayer"]
offset_right = 1150.0
offset_bottom = 106.0
theme = ExtResource("1_v6eoh")
bbcode_enabled = true
text = "[center] GET READY FIGHTERS [/center]"
metadata/_edit_use_anchors_ = true

[node name="Player1SetUpText" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -20.0
offset_right = 287.0
offset_bottom = 324.0
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="P1TitleText" type="RichTextLabel" parent="CanvasLayer/Player1SetUpText"]
layout_mode = 0
offset_right = 287.0
offset_bottom = 45.0
theme = ExtResource("2_6mkbl")
bbcode_enabled = true
text = "[center] PLAYER 1 [/center]"
metadata/_edit_use_anchors_ = true

[node name="P1GetReadyText" type="RichTextLabel" parent="CanvasLayer/Player1SetUpText"]
layout_mode = 0
offset_top = 237.0
offset_right = 287.0
offset_bottom = 348.0
theme = ExtResource("2_6mkbl")
bbcode_enabled = true
text = "[center] PLACE TO GET READY [/center]"

[node name="P1ReadyText" type="RichTextLabel" parent="CanvasLayer/Player1SetUpText"]
layout_mode = 0
offset_top = -42.0
offset_right = 287.0
offset_bottom = 42.0
theme = ExtResource("2_6mkbl")
theme_override_colors/default_color = Color(1, 0, 0, 1)
bbcode_enabled = true
text = "[center] READY [/center] "

[node name="P1Instructions" type="RichTextLabel" parent="CanvasLayer/Player1SetUpText"]
layout_mode = 0
offset_top = 67.0
offset_right = 287.0
offset_bottom = 247.0
theme = ExtResource("2_6mkbl")
bbcode_enabled = true
text = "[center] Instructions:
W, A, S, D to move
Place Turret:
R [/center]"

[node name="Player2SetUpText" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -287.0
offset_top = 304.0
grow_horizontal = 0
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="P2TitleText" type="RichTextLabel" parent="CanvasLayer/Player2SetUpText"]
layout_mode = 0
offset_right = 287.0
offset_bottom = 45.0
theme = ExtResource("2_6mkbl")
bbcode_enabled = true
text = "[center] PLAYER 2 [/center]"
metadata/_edit_use_anchors_ = true

[node name="P2GetReadyText" type="RichTextLabel" parent="CanvasLayer/Player2SetUpText"]
layout_mode = 0
offset_top = 237.0
offset_right = 287.0
offset_bottom = 348.0
theme = ExtResource("2_6mkbl")
bbcode_enabled = true
text = "[center] PLACE TO GET READY [/center]"

[node name="P2ReadyText" type="RichTextLabel" parent="CanvasLayer/Player2SetUpText"]
layout_mode = 0
offset_top = -42.0
offset_right = 287.0
offset_bottom = 42.0
theme = ExtResource("2_6mkbl")
theme_override_colors/default_color = Color(1, 0, 0, 1)
bbcode_enabled = true
text = "[center] READY [/center] "

[node name="P1Instructions" type="RichTextLabel" parent="CanvasLayer/Player2SetUpText"]
layout_mode = 0
offset_left = -21.0
offset_top = 67.0
offset_right = 287.0
offset_bottom = 247.0
theme = ExtResource("2_6mkbl")
bbcode_enabled = true
text = "[center] Instructions:
Arrow Keys to move
Place Turret:
Space [/center]"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(576, 324)

[node name="CountdownTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="player1" parent="." instance=ExtResource("3_284oa")]
position = Vector2(351, 357)

[node name="player2" parent="." instance=ExtResource("5_rca87")]
position = Vector2(753, 489)

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(1152, 328)
shape = SubResource("RectangleShape2D_yqufa")

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-2.5, 319)
shape = SubResource("RectangleShape2D_yqufa")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(580.912, -5.58372)
rotation = 1.57557
scale = Vector2(0.750825, 0.999779)
shape = SubResource("RectangleShape2D_dp1gm")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(572, 651)
rotation = 1.57557
scale = Vector2(0.750825, 0.999779)
shape = SubResource("RectangleShape2D_dp1gm")

[connection signal="timeout" from="CountdownTimer" to="." method="_on_countdown_timer_timeout"]
